Gb3-773: fix searchbar and search result: rename scss class, add max height to search results on mobile, restructure classes

--- a/src/app/map/components/search-window/search-window.component.scss
+++ b/src/app/map/components/search-window/search-window.component.scss
@@ -11,6 +11,10 @@
     width: map-layout-variables.$search-window-width;
     background-color: ktzh-variables.$zh-background-color;
     pointer-events: all;
+
+    .search-window__searchbar-mobile {
+      width: auto;
+    }
   }
 
   @media (max-width: calc(map-layout-variables.$map-overlay-width + map-layout-variables.$element-margin + map-layout-variables.$legend-button-width + map-layout-variables.$element-margin + map-layout-variables.$search-window-width)) {
@@ -23,6 +27,9 @@
           )
       );
     }
+    .search-window__searchbar-mobile {
+      width: auto;
+    }
   }
 
   .search-window__results_container {
@@ -34,7 +41,7 @@
   }
 
   @media (max-width: calc(map-layout-variables.$map-overlay-width + map-layout-variables.$element-margin + map-layout-variables.$legend-button-width + map-layout-variables.$element-margin + map-layout-variables.$search-window-width)) {
-    .search-window__results_container {
+    .search-window__results-container {
       width: calc(
         100vw -
           (
@@ -42,18 +49,16 @@
               map-layout-variables.$element-margin
           ) - (map-layout-variables.$search-window-width - map-layout-variables.$search-results-width)
       );
+      // max-height: 60vh;
+      // overflow-y: scroll;
     }
-  }
-
-  .search-window__searchbar-mobile {
-    @include mixins.map-element-box-shadow;
-    background-color: ktzh-variables.$zh-background-color;
-    pointer-events: all;
   }
 
   .search-window__results-mobile {
     @include mixins.map-element-box-shadow;
     background-color: ktzh-variables.$zh-background-color;
     pointer-events: all;
+    max-height: 60vh;
+    overflow-y: scroll;
   }
 }
